# yarr

./: .gitignore  README  README.md  cg-course-paper.odt
main/: yarr.cabal
main/Data/Yarr/: Base.hs  Flow.hs  Shape.hs
main/Data/Yarr/Repr/: Convoluted.hs  Delayed.hs  Foreign.hs  Separate.hs
main/Data/Yarr/Utils/: FixedVector.hs  Fork.hs  Touchable.hs
tests/: Makefile  bench-results.md  blur-unroll-bench.hs  blur.hs  canny-opencv.cpp  canny.hs  color-trans.hs  lightness-equalization.hs  lum-equalization.hs  planet-motion.hs  repa-canny.hs  test-config.md
yarr/: LICENSE  changelog.md  yarr.cabal
yarr-benchmarking/: LICENSE  yarr-benchmarking.cabal
yarr-benchmarking/Data/Yarr/: Benchmarking.hs
yarr-image-io/: LICENSE  changelog.md  yarr-image-io.cabal
yarr-image-io/Data/Yarr/IO/: Image.hsc
yarr/Data/: Yarr.hs
yarr/Data/Yarr/: Base.hs  Convolution.hs  Eval.hs  Flow.hs  Fold.hs  Fusion.hs  Shape.hs  Walk.hs  Work.hs  WorkTypes.hs
yarr/Data/Yarr/Convolution/: Eval.hs  Repr.hs  StaticStencils.hs
yarr/Data/Yarr/IO/: List.hs
yarr/Data/Yarr/Repr/: Boxed.hs  Checked.hs  Convoluted.hs  Delayed.hs  Foreign.hs  Separate.hs
yarr/Data/Yarr/Utils/: FixedVector.hs  Fork.hs  LowLevelFlow.hs  LowLevelFolds.hs  Parallel.hs  Primitive.hs  Split.hs  Storable.hs  Touchable.hs  VecTuple.hs  VecTupleInstances.hs
yarr/Data/Yarr/Utils/FixedVector/: Arity.hs  InlinableArity.hs  InlinableArityInstances.hs  VecTuple.hs  VecTupleInstances.hs
yarr/Data/Yarr/Walk/: Internal.hs
yarr/Data/Yarr/Work/: Internal.hs
yarr/Debug/: Yarr.hs
