Name:                yarr-benchmarking
Version:             0.9.0
Synopsis:            Yet another benchmarking suite for Yarr library
License:             MIT
License-file:        LICENSE
Author:              Roman Leventov
Maintainer:          Roman Leventov <leventov@ya.ru>
Bug-reports:         https://github.com/leventov/yarr/issues
Category:            Benchmarking
Build-type:          Simple
Cabal-version:       >= 1.8

Library
    build-depends:
        base == 4.6.*,
        yarr == 0.9.0,
        rdtsc == 1.3.*

    extensions:
        TypeFamilies, MultiParamTypeClasses,
        FlexibleContexts, EmptyDataDecls,
        FlexibleInstances, UndecidableInstances

    exposed-modules:
        Data.Yarr.Benchmarking
