Name:                yarr-benchmarking
Version:             1.3.1
Synopsis:            Yet another benchmarking suite for Yarr library
Description:
    Based on "Data.Array.Repa.IO.Timing" module from @repa-io@ package.
    .
    Measures execution time in milliseconds and CPU tics
    per array index (element).
License:             MIT
License-file:        LICENSE
Author:              Roman Leventov
Maintainer:          Roman Leventov <leventov@ya.ru>
Bug-reports:         https://github.com/leventov/yarr/issues
Category:            Benchmarking
Build-type:          Simple
Cabal-version:       >= 1.8

source-repository head
    type:     git
    location: https://github.com/leventov/yarr.git
    subdir:   yarr-benchmarking

Library
    build-depends:
        base >= 4.6 && <4.11,
        yarr >= 1.3,
        old-time == 1.1.*,
        rdtsc == 1.3.*

    extensions:
        TypeFamilies, MultiParamTypeClasses,
        FlexibleContexts, EmptyDataDecls,
        FlexibleInstances, UndecidableInstances

    exposed-modules:
        Data.Yarr.Benchmarking
