Name:                yarr-image-io
Version:             0.9.0
Synopsis:            Image IO for Yarr library
License:             MIT
License-file:        LICENSE
Author:              Don Stewart, Raphael Javaux, Roman Leventov
Maintainer:          Roman Leventov <leventov@ya.ru>
Bug-reports:         https://github.com/leventov/yarr/issues
Category:            Graphics
Build-type:          Simple
Cabal-version:       >= 1.8

Library
    build-depends:
        base == 4.6.*,
        yarr == 0.9.0

    extra-libraries: IL

    extensions:
        TypeFamilies, FlexibleContexts,
        GeneralizedNewtypeDeriving,
        ForeignFunctionInterface,
        CPP

    exposed-modules:
        Data.Yarr.IO.Image
