Name:                yarr-image-io
Version:             1.2.0
Synopsis:            Image IO for Yarr library
Description:
    @repa-devil@ package, adapted to @yarr@ library.
License:             MIT
License-file:        LICENSE
Author:              Don Stewart, Raphael Javaux, Roman Leventov
Maintainer:          Roman Leventov <leventov@ya.ru>
Bug-reports:         https://github.com/leventov/yarr/issues
Category:            Graphics
Build-type:          Simple
Cabal-version:       >= 1.8

source-repository head
    type:     git
    location: https://github.com/leventov/yarr.git
    subdir:   yarr-image-io

Library
    build-depends:
        base == 4.6.*,
        yarr == 1.2.*

    extra-libraries: IL

    extensions:
        TypeFamilies, FlexibleContexts,
        GeneralizedNewtypeDeriving,
        ForeignFunctionInterface,
        CPP

    exposed-modules:
        Data.Yarr.IO.Image
