Name:                yarr-image-io
Version:             1.3.2.1
Synopsis:            Image IO for Yarr library
Description:
    @repa-devil@ package, adapted to @yarr@ library.
License:             MIT
License-file:        LICENSE
Author:              Don Stewart, Raphael Javaux, Roman Leventov
Maintainer:          Dominic Steinitz <dominic@steinitz.org>
Bug-reports:         https://github.com/leventov/yarr/issues
Category:            Graphics
Build-type:          Simple
Cabal-version:       >= 1.8

tested-with:         GHC == 7.8.3

extra-source-files:  changelog.md

source-repository head
    type:     git
    location: https://github.com/leventov/yarr.git
    subdir:   yarr-image-io

Library
    build-depends:
        base >= 4.6 && <4.8,
        yarr == 1.3.*

    extra-libraries: IL

    extensions:
        TypeFamilies, FlexibleContexts,
        GeneralizedNewtypeDeriving,
        ForeignFunctionInterface,
        CPP

    exposed-modules:
        Data.Yarr.IO.Image
