Name:                yarr
Version:             0.9.0
Synopsis:            Yet another array library
License:             MIT
License-file:        LICENSE
Author:              Roman Leventov
Maintainer:          Roman Leventov <leventov@ya.ru>
Bug-reports:         https://github.com/leventov/yarr/issues
Category:            Data Structures, Data Flow, Graphics
Build-type:          Simple
Cabal-version:       >= 1.8

Library
    build-depends:
        base == 4.6.*,
        ghc-prim == 0.3.*,
        deepseq == 1.3.*,
        fixed-vector == 0.1.2,
        primitive >= 0.2,
        template-haskell == 2.8.*,
        missing-foreign == 0.1.1

    extensions:
        TypeFamilies, MultiParamTypeClasses, FunctionalDependencies,
        FlexibleContexts,
        EmptyDataDecls,
        FlexibleInstances, TypeSynonymInstances, UndecidableInstances,
        GeneralizedNewtypeDeriving, StandaloneDeriving,
        RankNTypes, ScopedTypeVariables, InstanceSigs,
        MagicHash, BangPatterns, UnboxedTuples,
        TemplateHaskell, CPP

    exposed-modules:
        Data.Yarr
        Data.Yarr.Base
        Data.Yarr.Eval
        Data.Yarr.Flow
        Data.Yarr.Shape
        Data.Yarr.Repr.Foreign
        Data.Yarr.Repr.Boxed
        Data.Yarr.Repr.Delayed
        Data.Yarr.Repr.Separate
        Data.Yarr.Repr.Checked
        Data.Yarr.Convolution
        Data.Yarr.Convolution.Repr
        Data.Yarr.Convolution.StaticStencils
        Data.Yarr.Utils.FixedVector
        Data.Yarr.Utils.Fork
        Data.Yarr.Utils.Parallel
        Data.Yarr.Utils.Split
        Data.Yarr.Utils.Primitive
        Data.Yarr.Utils.LowLevelFlow

    other-modules:
        -- re-exported in Utils.FixedVector
        Data.Yarr.Utils.VecTuple
        Data.Yarr.Utils.VecTupleInstances
